--- a/Rdt.CourseFinder/Views/PassReturn/List.cshtml
+++ b/Rdt.CourseFinder/Views/PassReturn/List.cshtml
@@ -18,7 +18,7 @@
             <td>@item.PassportReturnReason</td>
             <td data-id="@item.CandidateId" style="min-width:60px;">
                 <a class="btn-primary update-btn" data-status="@Model.AgreeStatus" title="Approve Request"><i class="icon-ok icon-white"></i></a>
-                <a class="btn update-btn" data-status="@Model.RejectStatus" title="Reject Request"><i class="icon-remove"></i></a>
+                <a class="btn update-btn" data-status="@Model.RejectStatus" title="Reject Request"><i class="icon-remove icon-white"></i></a>
             </td>
         </tr>    
     }
