--- a/Rdt.CourseFinder/Views/User/Edit.cshtml
+++ b/Rdt.CourseFinder/Views/User/Edit.cshtml
@@ -19,6 +19,11 @@
         @Html.LabelFor(m => m.Email)
         @Html.EditorFor(m => m.Email)
     </div>
+    
+    <div>
+        @Html.LabelFor(m => m.Branch)
+        @Html.EditorFor(m => m.Branch)
+    </div>
     if (Model.IsNew)
     {    
     <div>
